Sun Feb 17 20:45:10 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_prepare_re): add enable_warning parameter.
	  (rb_reg_adjust_startpos): disable warning by rb_reg_prepare_re.
	  (rb_reg_search): follow rb_reg_prepare_re parameter change.

Sun Feb 17 20:12:41 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_regexp.rb: add tests to achieve over 90% test
	  coverage of re.c.

Sun Feb 17 15:25:08 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (ENC_CODERANGE_AND): added.

	* string.c (rb_str_plus, srb_str_times): keep coderange.

	* parse.y (STR_NEW0) use rb_usascii_str_new.

Sun Feb 17 14:07:24 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (str_strlen): rb_enc_strlen doesn't fail.

Sun Feb 17 13:03:48 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (str_sublen): use rb_enc_strlen.

Sun Feb 17 12:17:52 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/{euc_jp.c,gbk.c,iso_8859_1.c,iso_8859_11.c,iso_8859_13.c,
	  iso_8859_2.c,iso_8859_6.c,iso_8859_7.c,iso_8859_8.c,iso_8859_9.c,
	  shift_jis.c,windows_1251.c}: add document about encodings.

	* enc/cp949.c: divided into new file.

Sun Feb 17 10:59:04 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_quote): return US-ASCII string consistently.

Sun Feb 17 09:17:08 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_times): reduce loop overhead.

Sun Feb 17 03:37:01 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/re.h (struct rmatch_offset): new struct for character
	  offsets.
	  (struct rmatch): new struct.
	  (struct RMatch): reference struct rmatch.
	  (RMATCH_REGS): new macro.

	* re.c (match_alloc): initialize struct rmatch.
	  (pair_byte_cmp): new function.
	  (update_char_offset): update character offsets.
	  (match_init_copy): copy regexp and character offsets.
	  (match_sublen): removed.
	  (match_offset): use update_char_offset.
	  (match_begin): ditto.
	  (match_end): ditto.
	  (rb_reg_search): make character offset updated flag false.
	  (match_size): use RMATCH_REGS.