@@ -56,13 +56,12 @@
 #define ENC_CODERANGE_SET(obj,cr) (RBASIC(obj)->flags = \
 				   (RBASIC(obj)->flags & ~ENC_CODERANGE_MASK) | (cr))
 #define ENC_CODERANGE_CLEAR(obj) ENC_CODERANGE_SET(obj,0)
-#define ENC_CODERANGE_AND(a, b) (\
-    (a == b) ? a : \
-    (a == ENC_CODERANGE_BROKEN) ? ENC_CODERANGE_BROKEN : \
-    (b == ENC_CODERANGE_BROKEN) ? ENC_CODERANGE_BROKEN : \
-    (a == ENC_CODERANGE_UNKNOWN) ? ENC_CODERANGE_UNKNOWN : \
-    (b == ENC_CODERANGE_UNKNOWN) ? ENC_CODERANGE_UNKNOWN : \
-    ENC_CODERANGE_VALID)
+
+/* assumed ASCII compatiblity */
+#define ENC_CODERANGE_AND(a, b) \
+    (a == ENC_CODERANGE_7BIT ? b : \
+     a == ENC_CODERANGE_VALID ? (b == ENC_CODERANGE_7BIT ? ENC_CODERANGE_VALID : b) : \
+     ENC_CODERANGE_UNKNOWN)
 
 #define ENCODING_CODERANGE_SET(obj, encindex, cr) \
     do { \
